Fix of MDEV-3799.

Find left table in right join (which turned to left join by reordering tables in join list but phisical order of tables of SELECT left as it was).